[package]
name = "duel"
version = "0.1.0"
description = "Duel Protocol: binary outcome markets with TWAP-resolved bonding curves"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "duel"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
blake3 = "=1.5.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug", "production", "custom-heap", "custom-panic"))',
    'cfg(anchor_debug)',
    'cfg(production)'
] }
